updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -214,6 +214,71 @@
     "tom = Person('Tom', 10, 'Seoul')\n",
     "tom.say_hello()\n",
     "tom.move_to('Pusan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Tom (from Pusan)\n",
+      "Hello Tom (from Pusan)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tom.say_hello()\n",
+    "Person.say_hello(tom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 주요 오버라이딩 멤버함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "국어성적 : 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Result(object):\n",
+    "    def __init__(self):\n",
+    "        self.result_dict = {}\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.result_dict)\n",
+    "    \n",
+    "    def __getitem__(self, key):\n",
+    "        return self.result_dict[key]\n",
+    "\n",
+    "    def __setitem__(self, key, value):\n",
+    "        self.result_dict[key] = value\n",
+    "    \n",
+    "result = Result()\n",
+    "print(len(result))\n",
+    "\n",
+    "result['국어'] = 100\n",
+    "print('국어성적 : {}'.format(result['국어']))"
    ]
   },
   {
