--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -283,6 +283,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<__main__.Result object at 0x106d5c470>'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tom\n",
+      "Tom\n",
+      "<Person: Tom, 10>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person(object):\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return '<Person: {}, {}>'.format(self.name, self.age)\n",
+    "        # return 'Person(\"{}\", \"{}\")'.format(self.name, self.age)  # eval 을 통해서 새로운 인스턴스를 생성할 수 있는 문자열 코드\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "\n",
+    "tom = Person('Tom', 10)\n",
+    "print(tom)  # equal to    print(str(tom))\n",
+    "print(str(tom))\n",
+    "print(repr(tom))\n",
+    "\n",
+    "#new_tom = eval(repr(tom))\n",
+    "#print(new_tom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# eval 예시\n",
+    "eval('1 + 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
