--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -367,6 +367,235 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "13\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "## __call__\n",
+    "class Calculator(object):\n",
+    "    def __init__(self, base):\n",
+    "        self.base = base\n",
+    "    \n",
+    "    def add(self, x, y):\n",
+    "        return self.base + x + y\n",
+    "    \n",
+    "    def __call__(self, x, y):\n",
+    "        return self.base + x + y\n",
+    "\n",
+    "calc = Calculator(10)\n",
+    "print(calc.add(1, 2))\n",
+    "print(calc.__call__(1, 2))\n",
+    "\n",
+    "print(calc(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## __iter__\n",
+    "\n",
+    "for i in [1, 2, 3, 4]:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Result(object):\n",
+    "    def __init__(self):\n",
+    "        self.index = 0\n",
+    "        self.values = [1, 2, 3, 4]\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        try:\n",
+    "            value = self.values[self.index]\n",
+    "        except IndexError:\n",
+    "            raise StopIteration\n",
+    "        self.index += 1\n",
+    "        return value\n",
+    "\n",
+    "result = Result()\n",
+    "for i in result:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 연산자 재정의"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A __add__  : <__main__.B object at 0x106d84be0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def __add__(self, other):\n",
+    "        print('A __add__  : {}'.format(other))\n",
+    "\n",
+    "class B:\n",
+    "    def __radd__(self, other):\n",
+    "        print('B __radd__ : {}'.format(other))\n",
+    "\n",
+    "# 좌측의 우선순위가 더 높습니다.\n",
+    "A() + B()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person(object):\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return self.age + other.age\n",
+    "\n",
+    "print(Person('Tom', 10) + Person('Steve', 12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 << 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1+10j)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 10j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 0, 1)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(0.4), round(0.5), round(0.51)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
