updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -595,6 +595,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 표준출력을 통한 로깅"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Jupyter Notebook 에서는 실행하지 마세요.\n",
+    "# 디폴트 파이썬 인터프리터나 소스코드를 통한 실행에서는 가능합니다.\n",
+    "'''\n",
+    "import sys\n",
+    "old_f = sys.stdout\n",
+    "log_f = open(\"test.log\", \"wt\")\n",
+    "sys.stdout = log_f\n",
+    "\n",
+    "print(\"hello world\")\n",
+    "\n",
+    "sys.stdout = old_f\n",
+    "old_f.close()\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
