updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -741,6 +741,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Name Mangling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tom\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.__name = name\n",
+    "    \n",
+    "\n",
+    "tom = Person('Tom')\n",
+    "print(tom._Person__name)\n",
+    "# print(dir(tom))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
