--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -749,7 +749,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tom\n",
+      "Hello Tom\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.__name = name\n",
+    "    \n",
+    "    def say_hello(self):\n",
+    "        print('Hello {}'.format(self.__name))\n",
+    "\n",
+    "tom = Person('Tom')\n",
+    "print(tom._Person__name)\n",
+    "# print(dir(tom))\n",
+    "tom.say_hello()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## get/setter 대신 property 이용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Person(object):\n",
+    "    def __init__(self, name):\n",
+    "        self._name = name\n",
+    "\n",
+    "    def get_name(self):\n",
+    "        return self._name\n",
+    "\n",
+    "    def set_name(self, value):\n",
+    "        if not value:\n",
+    "            raise ValueError('빈 이름은 허용하지 않습니다.')\n",
+    "        self._name = value\n",
+    "\n",
+    "    def del_name(self):\n",
+    "        del self._name\n",
+    "\n",
+    "    name = property(get_name, set_name, del_name,\n",
+    "        \"I'm the 'name' property.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -760,17 +824,36 @@
      "text": [
       "Tom\n"
      ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "빈 이름은 허용하지 않습니다.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-6d476f226c08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPerson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Tom'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-20-7dd22376d42a>\u001b[0m in \u001b[0;36mset_name\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mset_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'빈 이름은 허용하지 않습니다.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: 빈 이름은 허용하지 않습니다."
+     ]
     }
    ],
    "source": [
-    "class Person:\n",
-    "    def __init__(self, name):\n",
-    "        self.__name = name\n",
-    "    \n",
-    "\n",
     "tom = Person('Tom')\n",
-    "print(tom._Person__name)\n",
-    "# print(dir(tom))"
+    "print(tom.name)\n",
+    "tom.name = ''\n",
+    "print(tom.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "property?"
    ]
   },
   {
