updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -857,6 +857,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## memoize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "cached1 = {}\n",
+    "\n",
+    "def fn1(x, y):\n",
+    "    key = (x, y)\n",
+    "    if key not in cached1:\n",
+    "        time.sleep(1)\n",
+    "        cached1[key] = x + y\n",
+    "    return cached1[key]\n",
+    "\n",
+    "cached2 = {}\n",
+    "def fn2(x, y):\n",
+    "    key = (x, y)\n",
+    "    if key not in cached2:\n",
+    "        time.sleep(1)\n",
+    "        cached2[key] = x * y\n",
+    "    return cached2[key]\n",
+    "\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def memoize(fn):\n",
+    "    cached = {}\n",
+    "    def wrap(x, y):\n",
+    "        key = (x, y)\n",
+    "        if key not in cached:\n",
+    "            cached[key] = fn(x, y)\n",
+    "        return cached[key]\n",
+    "    return wrap\n",
+    "\n",
+    "# @memoize\n",
+    "def fn1(x, y):\n",
+    "    time.sleep(1)\n",
+    "    return x + y\n",
+    "\n",
+    "fn1 = memoize(fn1)\n",
+    "\n",
+    "@memoize\n",
+    "def fn2(x, y):\n",
+    "    time.sleep(1)\n",
+    "    return x * y\n",
+    "\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn2(1, 3))\n",
+    "print(fn1(1, 2))\n",
+    "print(fn1(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
