updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -974,13 +974,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MRO"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class A: pass\n",
+    "class B(A): pass\n",
+    "class C(A): pass\n",
+    "class D(B, C): pass\n",
+    "class E(C, B): pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot create a consistent method resolution\norder (MRO) for bases C, B",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-ac148e9f3b7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: Cannot create a consistent method resolution\norder (MRO) for bases C, B"
+     ]
+    }
+   ],
+   "source": [
+    "class F(D, E): pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(__main__.D, __main__.B, __main__.C, __main__.A, object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.__mro__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(__main__.E, __main__.C, __main__.B, __main__.A, object)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E.__mro__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<class '__main__.D'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>)\n",
+      "A\n",
+      "C\n",
+      "B\n",
+      "D\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def fn(self):\n",
+    "        print('A')\n",
+    "\n",
+    "class B(A):\n",
+    "    def fn(self):\n",
+    "        super().fn()\n",
+    "        print('B')\n",
+    "\n",
+    "class C(A):\n",
+    "    def fn(self):\n",
+    "        super().fn()\n",
+    "        print('C')\n",
+    "\n",
+    "class D(B, C):\n",
+    "    def fn(self):\n",
+    "        super().fn()\n",
+    "        print('D')\n",
+    "    \n",
+    "print(D.__mro__)\n",
+    "D().fn()"
+   ]
   },
   {
    "cell_type": "code",
