updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -1107,6 +1107,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<class '__main__.D'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>)\n",
+      "A : 1, 2\n",
+      "C : 1, 2\n",
+      "B : 1, 2\n",
+      "D : 1, 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 인자있는 부모의 함수 호출\n",
+    "\n",
+    "class A:\n",
+    "    def fn(self, x, y):\n",
+    "        print('A : {}, {}'.format(x, y))\n",
+    "\n",
+    "class B(A):\n",
+    "    def fn(self, x, y):\n",
+    "        super().fn(x, y)\n",
+    "        print('B : {}, {}'.format(x, y))\n",
+    "\n",
+    "class C(A):\n",
+    "    def fn(self, x, y):\n",
+    "        super().fn(x, y)\n",
+    "        print('C : {}, {}'.format(x, y))\n",
+    "\n",
+    "class D(B, C):\n",
+    "    def fn(self, x, y):\n",
+    "        super().fn(x, y)\n",
+    "        print('D : {}, {}'.format(x, y))\n",
+    "    \n",
+    "print(D.__mro__)\n",
+    "D().fn(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from django.forms import CharField\n",
+    "\n",
+    "class MyCharField(CharField):\n",
+    "    def is_valid(self, myname, *args, **kwargs):\n",
+    "        is_valid = super().is_valid(*args, **kwargs)\n",
+    "        # ...\n",
+    "        return is_valid\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
