updated 파이썬 강의 #03.ipynb

--- a/파이썬 강의 #03.ipynb
+++ b/파이썬 강의 #03.ipynb
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -1117,10 +1117,7 @@
      "output_type": "stream",
      "text": [
       "(<class '__main__.D'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>)\n",
-      "A : 1, 2\n",
-      "C : 1, 2\n",
-      "B : 1, 2\n",
-      "D : 1, 2\n"
+      "(<class '__main__.E'>, <class '__main__.B'>, <class '__main__.C'>, <class '__main__.A'>, <class 'object'>)\n"
      ]
     }
    ],
@@ -1145,9 +1142,13 @@
     "    def fn(self, x, y):\n",
     "        super().fn(x, y)\n",
     "        print('D : {}, {}'.format(x, y))\n",
-    "    \n",
+    "\n",
+    "class E(B, C, A):\n",
+    "    pass\n",
+    "        \n",
     "print(D.__mro__)\n",
-    "D().fn(1, 2)"
+    "print(E.__mro__)\n",
+    "# D().fn(1, 2)"
    ]
   },
   {
@@ -1166,6 +1167,58 @@
     "        # ...\n",
     "        return is_valid\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'aaa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-5c9597f3c824>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'aaa' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "aaa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "의사는 오늘도 뜁니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# abstract 멤버함수\n",
+    "\n",
+    "class Person:\n",
+    "    def run(self):\n",
+    "        raise NotImplementedError(\"run 함수를 구현해주세요.\")\n",
+    "\n",
+    "class Doctor(Person):\n",
+    "    def run(self):\n",
+    "        print(\"의사는 오늘도 뜁니다.\")\n",
+    "\n",
+    "Doctor().run()"
    ]
   },
   {
