update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -321,6 +321,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to_3 의 클래스 버전\n",
+    "\n",
+    "class To3:\n",
+    "    def __init__(self):\n",
+    "        self.i = 0\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.i >= 3:\n",
+    "            raise StopIteration\n",
+    "        self.i += 1\n",
+    "        return self.i\n",
+    "\n",
+    "for i in To3():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
