update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -409,6 +409,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 "
+     ]
+    }
+   ],
+   "source": [
+    "# Generator 를 활용한 피보나치 수열\n",
+    "\n",
+    "def fib(n):\n",
+    "    x, y, counter = 0, 1, 0\n",
+    "    while True:\n",
+    "        if counter > n:\n",
+    "            break\n",
+    "        yield x\n",
+    "        x, y = y, x + y\n",
+    "        counter += 1\n",
+    "\n",
+    "for x in fib(10):\n",
+    "    print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 1 2 3 5 8 13 21 34 55 "
+     ]
+    }
+   ],
+   "source": [
+    "def fib2():\n",
+    "    x, y = 0, 1\n",
+    "    while True:\n",
+    "        yield x\n",
+    "        x, y = y, x + y\n",
+    "\n",
+    "counter = 0\n",
+    "for x in fib2():\n",
+    "    print(x, end=' ')\n",
+    "    counter += 1\n",
+    "    if counter > 10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
