update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 1 2 3 5 8 13 21 34 55 "
+      "0 1 1 2 3 5 8 13 21 34 "
      ]
     }
    ],
@@ -428,7 +428,7 @@
     "def fib(n):\n",
     "    x, y, counter = 0, 1, 0\n",
     "    while True:\n",
-    "        if counter > n:\n",
+    "        if counter >= n:\n",
     "            break\n",
     "        yield x\n",
     "        x, y = y, x + y\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 1 2 3 5 8 13 21 34 55 "
+      "0 1 1 2 3 5 8 13 21 34 "
      ]
     }
    ],
@@ -464,7 +464,120 @@
     "for x in fib2():\n",
     "    print(x, end=' ')\n",
     "    counter += 1\n",
-    "    if counter > 10:\n",
+    "    if counter >= 10:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "numbers[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'generator' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-43dae0b6e964>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfib2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'generator' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "fib2()[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import islice\n",
+    "\n",
+    "print(list(islice(fib2(), 10)))\n",
+    "\n",
+    "for i in islice(fib2(), 10):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import count\n",
+    "for i, x in zip(count(1), fib2()):\n",
+    "    print(x)\n",
+    "    if i > 10:\n",
     "        break"
    ]
   },
