update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -614,6 +614,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 9209\n",
+      "2 1 2574\n",
+      "3 1 2132\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 카운트값, 피보나치수열값, 랜덤값을 순차적으로 생성\n",
+    "\n",
+    "import random\n",
+    "from itertools import count, islice\n",
+    "\n",
+    "def random_generater():\n",
+    "    while True:\n",
+    "        yield random.randint(0, 10000)\n",
+    "\n",
+    "gen1 = count(1)\n",
+    "gen2 = fib2()\n",
+    "gen3 = random_generater()\n",
+    "\n",
+    "for (v1, v2, v3) in islice(zip(gen1, gen2, gen3), 3):\n",
+    "    print(v1, v2, v3)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
