update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -623,9 +623,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 0 9209\n",
-      "2 1 2574\n",
-      "3 1 2132\n"
+      "1 0 4871\n",
+      "2 1 858\n",
+      "3 1 5869\n"
      ]
     }
    ],
@@ -635,17 +635,197 @@
     "import random\n",
     "from itertools import count, islice\n",
     "\n",
-    "def random_generater():\n",
+    "def random_generator():\n",
     "    while True:\n",
     "        yield random.randint(0, 10000)\n",
     "\n",
     "gen1 = count(1)\n",
     "gen2 = fib2()\n",
-    "gen3 = random_generater()\n",
+    "gen3 = random_generator()\n",
     "\n",
     "for (v1, v2, v3) in islice(zip(gen1, gen2, gen3), 3):\n",
     "    print(v1, v2, v3)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "홍길동\n",
+      "홍길동\n",
+      "피카츄\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 랜덤을 이용한 작명 Generator\n",
+    "import random\n",
+    "\n",
+    "def make_name():\n",
+    "    while True:\n",
+    "        yield random.choice(['홍길동', '홍길순', '피카츄', '잡스'])\n",
+    "\n",
+    "gen = make_name()\n",
+    "print(next(gen))\n",
+    "print(next(gen))\n",
+    "print(next(gen))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'홍길동'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random.choice(['홍길동', '홍길순', '피카츄', '잡스'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comprehension (List, Dict, Set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 16, 36, 64, 100]"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "list(map(lambda i: i**2, filter(lambda i: i%2==0, numbers)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 16, 36, 64, 100]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehension\n",
+    "[i ** 2 for i in numbers if i % 2 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 16, 36, 64, 100]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = []\n",
+    "for i in numbers:\n",
+    "    if i % 2 == 0:\n",
+    "        mylist.append(i**2)\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4, 16, 36, 64, 100}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set comprehension\n",
+    "{ i ** 2 for i in numbers if i % 2 == 0 }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 4, 4: 16, 6: 36, 8: 64, 10: 100}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dict comprehension\n",
+    "{ i : i ** 2 for i in numbers if i % 2 == 0 }"
    ]
   },
   {
