update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -830,6 +830,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name1': 5, 'name222': 7, '또보': 2, '피카츄': 3}"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names = [\"피카츄\", \"또보\", \"name1\", \"name222\"]\n",
+    "\n",
+    "# [ len(name) for name in names ]\n",
+    "{ name: len(name) for name in names }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
