update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -924,13 +924,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 장식자 (Decorator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def mysum(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "fn = mysum  # 함수도 대입이 가능하다.\n",
+    "fn(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mysum_anonymous = lambda x, y: x + y  # 동적으로 함수를 생성 !!!\n",
+    "mysum_anonymous(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "def myfn(base):\n",
+    "    fn = lambda x, y: x + y + base\n",
+    "    return fn\n",
+    "'''\n",
+    "\n",
+    "def myfn(base):\n",
+    "    def fn(x, y):\n",
+    "        return x + y + base\n",
+    "    return fn\n",
+    "\n",
+    "result_fn1 = myfn(20)\n",
+    "print(result_fn1(1, 2))\n",
+    "\n",
+    "result_fn2 = myfn(30)\n",
+    "print(result_fn2(1, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "13\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 위 코드를 장식자 스타일로 변형\n",
+    "def base(fn):\n",
+    "    base_i = 10\n",
+    "    def wrap(x, y):\n",
+    "        return fn(x, y) + base_i\n",
+    "    return wrap\n",
+    "\n",
+    "def mysum1(x, y):\n",
+    "    return x + y\n",
+    "mysum1 = base(mysum1)\n",
+    "\n",
+    "@base\n",
+    "def mysum2(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "@base\n",
+    "def mymultiply1(x, y):\n",
+    "    return x * y\n",
+    "\n",
+    "print(mysum1(1, 2))\n",
+    "print(mysum2(1, 2))\n",
+    "print(mymultiply1(10, 3))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x"
+   ]
   }
  ],
  "metadata": {
