update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -1058,6 +1058,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dict_with_length(fn):\n",
+    "    pass  # TODO\n",
+    "\n",
+    "@dict_with_length\n",
+    "def make_names():\n",
+    "    return ['피까쭈웅', '라이어언', '브라우우우운']\n",
+    "\n",
+    "# make_names()  # 실행결과\n",
+    "# { '피까쭈웅': 4, '라이어언': 4, '브라우우우운': 6 }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
