update 파이썬 강의 #04.ipynb

--- a/파이썬 강의 #04.ipynb
+++ b/파이썬 강의 #04.ipynb
@@ -1058,21 +1058,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'라이어언': 4, '브라우우우운': 6, '피까쭈웅': 4}"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dict_with_length(fn):\n",
-    "    pass  # TODO\n",
+    "    def wrap():\n",
+    "        return {name: len(name) for name in fn()}\n",
+    "    return wrap\n",
     "\n",
     "@dict_with_length\n",
     "def make_names():\n",
     "    return ['피까쭈웅', '라이어언', '브라우우우운']\n",
     "\n",
-    "# make_names()  # 실행결과\n",
+    "make_names()  # 실행결과\n",
     "# { '피까쭈웅': 4, '라이어언': 4, '브라우우우운': 6 }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def filter_odd_number(fn):\n",
+    "    def wrap(*args):\n",
+    "        # args = (1, 3)  => (1, 3)\n",
+    "        # args = (1, 2)  => (1, 0)\n",
+    "\n",
+    "        numbers = [(0 if i%2==0 else i) for i in args]\n",
+    "        \n",
+    "        '''\n",
+    "        numbers = []\n",
+    "        for i in args:\n",
+    "            numbers.append(0 if i % 2 == 0 else i)\n",
+    "        '''\n",
+    "\n",
+    "        '''\n",
+    "        numbers = []\n",
+    "        for i in args:\n",
+    "            if i % 2 == 0:\n",
+    "                numbers.append(0)\n",
+    "            else:\n",
+    "                numbers.append(i)\n",
+    "        '''\n",
+    "        \n",
+    "        return fn(*numbers)\n",
+    "    return wrap\n",
+    "\n",
+    "@filter_odd_number\n",
+    "def mysum2(x, y):\n",
+    "    return x + y\n",
+    "\n",
+    "@filter_odd_number\n",
+    "def mysum3(x, y, z):\n",
+    "    return x + y + z\n",
+    "\n",
+    "@filter_odd_number\n",
+    "def mysum4(a, b, c, d, e, f, g):\n",
+    "    return a + b + c + d + e + f + g\n",
+    "\n",
+    "print(mysum2(1, 2))  # 1\n",
+    "print(mysum2(2, 4))  # 0\n",
+    "print(mysum2(1, 3))  # 4"
    ]
   },
   {
